# sentiric-tts-coqui-service

./: .context.md  .env.example  .gitignore  Dockerfile  LICENSE  LOGIC.md  Makefile  README.md  TASK.md  TASKS.md  benchmark_report.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: grpc_server.py  main.py
app/api/: endpoints.py  schemas.py
app/api/v1/: endpoints.py
app/core/: audio.py  config.py  engine.py  history.py  logging.py  logging_utils.py  middleware.py  normalizer.py  ssml_handler.py
app/services/: tts_service.py
docs/test_scenarios/: director_mode_demo.md
scripts/: entrypoint.sh
static/: index.html
static/css/: style.css
static/js/: api.js  audio-core.js  main.js  studio.js  ui.js
tests/: README.md  benchmark.py  diagnostic.py  full_audit.py  grpc_client.py  integration_robustness.py  run.sh  run_audit.sh  test_stream_recording.py
tools/: setup_demo_assets.py  voice_harvester.py
