[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiric-tts-coqui-service"
version = "0.1.1"
description = "Sentiric TTS Coqui Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn", # <--- GUNICORN'U EKLE
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "prometheus-fastapi-instrumentator",
    "httpx",
    "soundfile",
    "numpy",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "transformers==4.39.3",
    "librosa==0.10.1",
    "numba==0.58.1",
    "TTS @ git+https://github.com/azmisahin-forks/coqui-TTS.git@sentiric"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"