[tool.poetry]
name = "sentiric-tts-coqui-service"
version = "0.1.1"
description = "Sentiric TTS Coqui Service"
authors = ["Azmi ŞAHİN <6445951+azmisahin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^22.0.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
# --- DÜZELTME BURADA ---
prometheus-fastapi-instrumentator = "^6.1.0"
# --- DÜZELTME SONU ---
httpx = "^0.27.0"
soundfile = "^0.12.1"
numpy = "^1.26.4"
torch = "2.3.0"
torchaudio = "2.3.0"
transformers = "4.39.3"
librosa = "0.10.1"
numba = "0.58.1"
TTS = {git = "https://github.com/azmisahin-forks/coqui-TTS.git", rev = "sentiric"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"